[package]
name = "myproject"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
egui_graphs = { path = "../../", features = ["events"] }
egui = "0.27"
eframe = "0.27"
serde_json = "1.0"
petgraph = "0.6"
fdg-sim = "0.9"
rand = "0.8"
crossbeam = "0.8"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.13"
tokio = { version = "1", features = ["full"] }
webbrowser = "0.6"